--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-transformer-sharp": "^4.5.0",
+    "photoswipe": "^4.1.3",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "simple-react-lightbox": "^3.6.9-0"
   },
   "devDependencies": {
     "gatsby-plugin-root-import": "^2.0.8",
@@ -39,7 +41,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "dev-m": "gatsby develop -H 192.168.1.11 -p 8000",
+    "dev-m": "gatsby develop -H 192.168.1.12 -p 8000",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
